<resources>
    <string name="app_name">YourCare</string>
    <string name="name">Name</string>
    <string name="speciality">Speciality</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up at Yourcare</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="category">ရောဂါအမျိုးအစားများ</string>
    <string name="recent_discussion">မကြာသေးခင်က ဆွေးနွေးမှုများ</string>
    <string name="case_summary">လူနာအချက်အလက်များဖြည့်ပါ</string>
    <string name="to_be_continue">ဆက်ရန်</string>
    <string name="birthdate">မွေးနေ့</string>
    <string name="blood_type">သွေးအမျိုးအစား</string>
    <string name="height">အရပ်</string>
    <string name="weight">ပေါင်ချိန်</string>
    <string name="phone_burmese">ဖုန်းနံပါတ်</string>
    <string name="blood_pressure">သွေးပေါင်ချိန်</string>
    <string name="allergy_medicine">မတည့်သောဆေး</string>
    <string name="general_question">အထွေထွေ မေးခွန်းများ</string>
    <string name="special_question">ရောဂါဆိုင်ရာမေးခွန်းများ</string>
    <string name="please_confirm_the_information">အချက်အလက်များအားအတည်ပြုပေးပါ</string>
    <string name="user_information">လူနာအချက်အလက်များ</string>
    <string name="start_consultation">ချိန်းဆိုမှုပြုလုပ်မည်</string>
    <string name="you_can_start_consultation">ဆွေးနွေးမှု ပြုလုပ်နိုင်ပါပြီ</string>
    <string name="start_conversation">စတင်ဆွေးနွေးမည်</string>
    <string name="doctor_name_mm"> ပါမောက္ခ ဦးအောင်၀င်း </string>
    <string name="specialty_mm">ဦးနှောက်နဲ့ အာရုံကြောဆိုင်ရာ</string>
    <string name="recent_dotors_mm">မကြာသေးခင်က ဆွေးနွေးမှုများ</string>
    <string name="consultation_confirmation">ဆွေးနွေးမှု တည်ပြုချက်</string>
    <string name="Are_you_sure_to_consult_with_doctors">ဆရာဝန်နှင့် တိုင်ပင်ဆွေးနွေးရန် Consultation Request ပြုလုပ်မှာ သေချာပါသလား ?</string>
    <string name="cancel_mm">မလုပ်တော့ပါ</string>
    <string name="confirm_mm">သေချာပါသည်</string>
    <string name="consultation_record_mm">ချိန်းဆိုမှု မှတ်တမ်းများ</string>
    <string name="date_sample">25/11/2020</string>
    <string name="send_message_mm">စာပို့မည်</string>
    <string name="prescription_mm">ဆေးညွှန်း</string>
    <string name="close_mm">ပိတ်မည်</string>
    <string name="penicillin">Penicillin</string>
    <string name="amount_mm">ပမာဏ</string>
    <string name="times_mm">အရေအတွက်</string>
    <string name="days_mm">ကြာချိန်</string>
    <string name="routine_mm">အကြိမ် အရေအတွက်</string>
    <string name="remark_mm">မှတ်ချက်</string>
    <string name="address_mm">လိပ်စာ</string>
    <string name="state_mm">တိုင်း/ပြည်နယ်</string>
    <string name="township_mm">မြို့နယ်</string>
    <string name="address_detail_mm">လိပ်စာအပြည့်အစုံ</string>
    <string name="choose_address_mm">လိပ်စာရွေးချယ်မည်</string>
    <string name="order_mm">မှာယူမည်</string>
    <string name="total">Total(MMK)</string>
    <string name="amount_sample">18500</string>
    <string name="order_prescrption_mm">ဆေးညွှန်း မှာယူမည်</string>
    <string name="sign_in_with_fb">Sign In With Facebook</string>
    <string name="sign_in_with_apple">Sign In With Apple</string>
    <string name="start_consultation_mm">စတင် ဆွေးနွေးမည်</string>
    <string name="can_start_consultation">ဆွေးနွေးမှု ပြုလုပ်နိုင်ပါပြီ</string>
    <string name="accept_mm">ဆွေးနွေးမှုပြုလုပ်ရန်</string>
    <string name="accept_two_mm">မှလက်ခံထားပါသည်</string>
    <string name="dr_sample">Dr Aung Nyein</string>
    <string name="chat_hint">ရေးသားပါ</string>
    <string name="speciality_sample_mm">Bones and Joints</string>
    <string name="doctor_bio_sample_mm">ပါမောက္ခဦးအောင်ဝင်းသည် 2000 ပြည့်နှစ်တွင် ပါမောက္ခဘွဲ့ကို  ရရှိခဲ့ပြီး လက်ရှိတွင်  Bumrungrad International Hospital တွင်  ဦးနှောက် ...</string>
    <string name="user_name">Aung Aung</string>
    <string name="date">17 Nov 1998</string>
    <string name="patient_name">လူနာအမည်</string>
    <string name="sample_height">5.8ft</string>
    <string name="blood_type_sample">B</string>
    <string name="allergy_medi_sample">Penicillin</string>
    <string name="patient_info">လူနာအချက်အလက်</string>
    <string name="medical_info">ရောဂါဆိုင်ရာအချက်အလက်များ</string>
    <string name="more_mm">ထပ်ကြည့်မည်  >></string>
    <string name="prescription_label">ဆေးညွှန်းမှာယူမည်</string>

</resources>