<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/login_bg">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/login"
        android:layout_gravity="center">

    </ImageView>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginLeft="@dimen/margin_medium_3"
        android:layout_marginRight="@dimen/margin_medium_3"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patientEmail"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginLeft="@dimen/margin_medium_3"
        android:layout_marginTop="@dimen/margin_medium_4"
        android:layout_marginRight="@dimen/margin_medium_3"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patientName"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginLeft="@dimen/margin_medium_3"
        android:layout_marginTop="@dimen/margin_medium_4"
        android:layout_marginRight="@dimen/margin_medium_3"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/blue"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patientPswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerPatient"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/register"
        app:cornerRadius="@dimen/margin_medium_4"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:layout_marginLeft="@dimen/margin_medium_3"
        android:layout_marginRight="@dimen/margin_medium_3">

    </com.google.android.material.button.MaterialButton>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:layout_marginLeft="@dimen/margin_medium_3"
            >

        </TextView>
        <TextView
            android:id="@+id/navigateLoginTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20dp"
            android:textColor="@color/blue"
            android:layout_marginLeft="@dimen/margin_medium_3"
            >

        </TextView>
    </LinearLayout>

</LinearLayout>