<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:layout_margin="15dp"
    app:cardCornerRadius="@dimen/margin_medium_4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/margin_medium_3"
                app:cardCornerRadius="40dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/gooddoctor"></ImageView>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/doctor_name_mm"
                    android:textColor="@color/text_grey"
                    android:textSize="17sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/specialty_mm"
                    android:textColor="@color/text_grey"
                    android:textSize="15sp">

                </TextView>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_4"
                android:layout_marginTop="@dimen/margin_medium_4"
                android:text="@string/date_sample">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSendMessage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/send_message_mm"
                app:icon="@drawable/ic_chat_box"
                app:iconPadding="@dimen/margin_medium_4">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_toRightOf="@+id/btnSendMessage"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/prescription_mm"
                app:icon="@drawable/ic_prescription_record"
                app:iconPadding="@dimen/margin_medium_4">

            </com.google.android.material.button.MaterialButton>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>