<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="356dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/margin_medium_4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@mipmap/appt_confirmation">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/consultation_confirmation"
            android:textColor="@color/text_grey"
            android:textSize="19sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/margin_medium_3"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins"
            android:lineHeight="19sp"
            android:text="@string/Are_you_sure_to_consult_with_doctors"
            android:textColor="@color/teal_patient"
            android:textSize="16sp">

        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_4">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancelConsultation"
                android:layout_width="128dp"
                android:layout_height="39dp"
                android:layout_marginLeft="@dimen/margin_xlarge"
                android:layout_marginRight="@dimen/margin_medium_3"
                android:layout_marginBottom="@dimen/margin_medium_3"
                android:backgroundTint="@color/white"
                android:text="@string/cancel_mm"
                android:textColor="@color/blue">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfirmConsultation"
                android:layout_width="128dp"
                android:layout_height="39dp"
                android:layout_marginRight="@dimen/margin_medium_3"
                android:layout_marginBottom="@dimen/margin_medium_3"
                android:layout_toRightOf="@+id/btnCancelConsultation"
                android:backgroundTint="@color/blue"
                android:text="@string/confirm_mm">

            </com.google.android.material.button.MaterialButton>
        </RelativeLayout>
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>