<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chat_bg">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/margin_medium_3"
                android:layout_margin="@dimen/margin_medium_4"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium_3"
                    >
                    <ImageView
                        android:id="@+id/infoIcon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_baseline_info_24"
                        android:padding="5dp"
                        android:layout_marginLeft="@dimen/margin_medium_4"
                        >

                    </ImageView>
                    <TextView
                        android:id="@+id/startTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/you_can_start_consultation"
                        android:textSize="16sp"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/blue"
                        android:layout_toRightOf="@id/infoIcon"
                        android:paddingTop="5dp"
                        >

                    </TextView>
                    <RelativeLayout
                        android:id="@+id/acceptedText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/startTxt"
                        android:layout_marginLeft="@dimen/margin_medium_4"
                        >
                        <TextView
                            android:id="@+id/doctorTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/accept_mm"
                            android:textSize="16sp">
                        </TextView>
                        <TextView
                            android:id="@+id/acceptedDoctorName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/doctor_name_mm"
                            android:textSize="16sp"
                            android:layout_toRightOf="@id/doctorTxt">
                        </TextView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/acceptedDoctorName"
                            android:text="@string/accept_two_mm"
                            android:textSize="16sp">

                        </TextView>

                    </RelativeLayout>
                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/doctorProfileCard"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:cardCornerRadius="30dp"
                        android:layout_below="@id/acceptedText"
                        android:layout_marginLeft="@dimen/margin_medium_4"
                        android:layout_marginTop="@dimen/margin_mid">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/gooddoctor"
                            >
                        </ImageView>
                    </com.google.android.material.card.MaterialCardView>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_toRightOf="@id/doctorProfileCard"
                        android:layout_below="@+id/acceptedText"
                        android:layout_marginLeft="@dimen/margin_mid"
                        android:layout_marginTop="@dimen/margin_medium_2">
                        <TextView
                            android:id="@+id/acceptedDoctorNameTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/doctor_name_mm"
                            android:textSize="15sp"
                            android:fontFamily="@font/poppins_bold">

                        </TextView>
                        <TextView
                            android:id="@+id/acceptedSpeciality"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/specialty_mm"
                            android:textSize="13sp">

                        </TextView>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/doctorBio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/doctorProfileCard"
                        android:layout_marginLeft="@dimen/margin_medium_4"
                        android:layout_marginTop="@dimen/margin_medium_4"
                        android:text="@string/doctor_bio_sample_mm">

                    </TextView>
                    <TextView
                        android:id="@+id/btnStartConsultation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/doctorBio"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="@dimen/margin_medium_3"
                        android:text="@string/start_consultation_mm"
                        android:textColor="@color/blue"
                        android:textSize="15sp"
                        android:fontFamily="@font/poppins_bold"
                        android:layout_marginRight="@dimen/margin_medium_4"
                        >

                    </TextView>

                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recent_dotors_mm"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_bold"
                android:layout_margin="@dimen/margin_medium_3"
                android:visibility="gone"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRecentDoctors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                >

            </androidx.recyclerview.widget.RecyclerView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_bold"
                android:layout_margin="@dimen/margin_medium_3"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSpecialities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium_4"
                tools:listitem="@layout/item_specialities">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>